# metanetx

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LATEST_BASE_TAG  Makefile  README.md  dev-requirements.txt  docker-compose.yml  gunicorn.py  requirements.txt  setup.cfg
deployment/: deployment.yml  ingress.yml  service.yml
requirements/: requirements.in  requirements.txt
scripts/: deploy.sh  generate_reaction_names.py  verify_license_headers.sh
src/metanetx/: __init__.py  app.py  data.py  parser.py  resources.py  schemas.py  settings.py  wsgi.py
tests/: conftest.py
tests/integration/: test_endpoints.py
tests/unit/: test_app.py
